--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="picture">
         <div class="logo">
           <img class="odin" src="./images/odin-lined.png" alt="" />
-          <h1>Odin Project</h1>
+          <h1>Super Project</h1>
         </div>
       </div>
       <div class="login-side">
