--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </form>
           </div>
           <span class="already-user"
-            >Already have an account? <a href="/"><strong>Log in</strong></a></span
+            >Already have an account? <a href="/sign-up-form"><strong>Log in</strong></a></span
           >
         </div>
       </div>
