--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
           <img class="odin" src="./images/odin-lined.png" alt="" />
           <h1>Super Project</h1>
         </div>
+        <p class="author">Photo by <a href="https://unsplash.com/@efekurnaz">Efe Kurnaz</a> on <a href="https://unsplash.com/">Unsplash</a></p>
       </div>
       <div class="login-side">
         <div class="content">
